# CS421

./: haskell-tut.hs  midterm1.hs  midterm2.hs  tutorial_1.hi  tutorial_1.hs  tutorial_2.hs  tutorial_3.hs  tutorial_4.hs  tutorial_5.hs
activities/a02-hydra/: README.md  a02-hydra.cabal
activities/a02-hydra/src/: Lib.hs
activities/a03-calculator/: README.md  a03-calculator.cabal
activities/a03-calculator/src/: Lib.hs
activities/a03-calculator/test/: Spec.hs
activities/cps/: README.md  cps.cabal
activities/cps/src/: Lib.hs
activities/cps/test/: Spec.hs
activities/ll-parsing/: LICENSE  README.md  ll-parsing.cabal
activities/ll-parsing/app/: Main.hs
activities/ll-parsing/src/: Lib.hs
activities/ll-parsing/test/: Spec.hs
activities/monad-activity/: monad-activity.cabal
activities/monad-activity/src/: Lib.hs
activity/: activity1.hs  activity2.hs  activity3.hs  activity3_1.hs  activity4.hs
examples/01-18/: p2.hs
examples/01-23/: p3a.hs  p3b.hs
examples/01-25/: p4a.hs  p4b.hs
examples/01-30/: Interpreter Activity 1 p1.ipynb  Interpreter Activity 1 p2.ipynb  interpreter-activity-p1.html  interpreter-activity-p2.html
examples/02-01/: Interpreter-Activity-2-p2.ipynb  Interpreter-Activity-2.ipynb
examples/02-06/: p1.org  p2.org
examples/02-08/: p1.md  p2.md
examples/02-13/: p1.hs  p1.txt  p2.hs  p2.txt
examples/02-15/: p1.hs  p1.txt  p2.hs  p2.txt
examples/02-27/: p1.hs
examples/03-08/: p1.txt  p2.txt
examples/03-13/: p1.hs
examples/03-15/: p1.hs  p2.hs  problems.txt
examples/03-27/: p1.txt  p2.txt
examples/04-03/04-03/: p1.py
examples/04-05/04-05/: p1.py  p2.py
examples/04-12/04-12/: p1.txt  p2.txt
examples/04-17/Prolog Lecture/: q1.pl  q2.pl  q3.pl  q4.pl  q5.pl
examples/04-19/Cut Operator Lecture/: mynot.pl  p1.pl  p2.pl  p3.pl  p5.pl  p5alt.pl  p5alt2.pl  p6a.pl  p6b.pl
examples/lambda/: lambda.cabal
grades/: grade-report.txt
grades/midterm-1/: code-hs-adtTuple-tuple2pair_prodTuple.txt  code-hs-cps-sqr3.txt  code-hs-functorWrite-02.txt  code-hs-hofUse-maxList.txt  code-hs-hofWrite-each.txt  code-hs-monad-write-03.txt  code-hs-recursionList-listsubtractn.txt  code-hs-recursionTail-maxList.txt
grades/midterm-1/code-hs-adtTuple-tuple2pair_prodTuple/: code.hs
grades/midterm-1/code-hs-cps-sqr3/: code.hs
grades/midterm-1/code-hs-functorWrite-02/: code.hs
grades/midterm-1/code-hs-hofUse-maxList/: code.hs
grades/midterm-1/code-hs-hofWrite-each/: code.hs
grades/midterm-1/code-hs-monad-write-03/: code.hs
grades/midterm-1/code-hs-recursionList-listsubtractn/: code.hs
grades/midterm-1/code-hs-recursionTail-maxList/: code.hs
mps/mp1-haskell/: README.md  mp1-haskell.cabal
mps/mp1-haskell/src/: Lib.hs
mps/mp1-haskell/test/: Spec.hs
mps/mp2-interpreter/: Derive.hs  README.md  mp2-interpreter.cabal
mps/mp2-interpreter/app/: Main.hs
mps/mp2-interpreter/src/: Lib.hs
mps/mp2-interpreter/test/: Spec.hs
mps/mp3-cps/: README.md  mp3-cps.cabal
mps/mp3-cps/app/: Main.hs
mps/mp3-cps/src/: Lib.hs  Parse.hs
mps/mp3-cps/test/: Tests.hs
mps/mp4-forth/forth-mp/: README.md  mp4-forth.cabal
mps/mp4-forth/forth-mp/app/: Main.hs
mps/mp4-forth/forth-mp/src/: Lib.hs
mps/mp4-forth/forth-mp/test/: Spec.hs
mps/mp5-scheme/mp5-scheme/: .gitignore  README.md  mp5-scheme.cabal  stack.yaml
mps/mp5-scheme/mp5-scheme/app/: Main.hs
mps/mp5-scheme/mp5-scheme/app/Scheme/: Eval.hs  Parse.hs  Runtime.hs
mps/mp5-scheme/mp5-scheme/test/: Spec.hs  Tests.hs
mps/mp6-type-infer/: README.md  mp6-type-infer.cabal
mps/mp6-type-infer/app/: Main.hs
mps/mp6-type-infer/src/: Common.hs  Infer.hs  Parser.hs
mps/mp6-type-infer/test/: Spec.hs  Tests.hs
potd/potd-01/: README.md  potd1.cabal
potd/potd-01/src/: Lib.hs
potd/potd-01/test/: Spec.hs
potd/potd-02/: README.md  potd2.cabal
potd/potd-02/src/: Lib.hs
potd/potd-02/test/: Spec.hs
potd/potd-03/: README.md  potd3.cabal
potd/potd-03/src/: Lib.hs
potd/potd-03/test/: Spec.hs
potd/potd-04/: README.md  potd4.cabal
potd/potd-04/src/: Lib.hs
potd/potd-04/test/: Spec.hs
potd/potd-05/: README.md  potd5.cabal
potd/potd-05/src/: Lib.hs
potd/potd-05/test/: Spec.hs
potd/potd-06/: README.md  potd6.cabal
potd/potd-06/src/: Lib.hs
potd/potd-06/test/: Spec.hs
potd/potd-07/potd-07/: README.md  potd7.cabal
potd/potd-07/potd-07/src/: Lib.hs
potd/potd-07/potd-07/test/: Spec.hs
potd/potd-08/potd-08/: LICENSE  README.md  potd8.cabal
potd/potd-08/potd-08/src/: Lib.hs
potd/potd-08/potd-08/test/: Spec.hs
potd/potd-09/potd-09/: README.md  potd9.cabal  stack.yaml
potd/potd-09/potd-09/src/: Lib.hs
potd/potd-09/potd-09/test/: Spec.hs
potd/potd-10/: README.md  potd10.cabal
potd/potd-10/src/: Lib.hs
potd/potd-10/test/: Spec.hs
