name:                ll-parsing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mattoxb/ll-parsing#readme
license:             BSD3
license-file:        LICENSE
author:              Mattox Beckman
maintainer:          mattox@illinois.edu
copyright:           2018
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , regex-tdfa
  default-language:    Haskell2010

executable ll-parsing-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ll-parsing
                     , regex-tdfa
  default-language:    Haskell2010

test-suite ll-parsing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ll-parsing
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , regex-tdfa
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattoxb/ll-parsing
