name:                mp1-haskell
version:             0.1.0.0
synopsis:            Ensure you know some basic Haskell
license:             NCSA
build-type:          Simple
cabal-version:       >= 1.24

library
    hs-source-dirs:     src
    exposed-modules:    Lib
    build-depends:      base
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base
                      , mp1-haskell
                      , QuickCheck
                      , test-framework
                      , test-framework-quickcheck2
    default-language:   Haskell2010
