name:                mp6-type-infer
version:             0.1.0.0
synopsis:            Write PicoML's Type Inferencer
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Common, Infer, Parser
    build-depends:      base, containers
    default-language:   Haskell2010

executable main
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base, containers, mp6-type-infer
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Tests
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Spec
    build-depends:      base, containers
                      , mp6-type-infer
                      , test-framework
                      , test-framework-quickcheck2
                      , QuickCheck
    default-language:   Haskell2010
