name:                mp4-forth
version:             0.1.0.0
synopsis:            Write an evaluator for a subset of Forth
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Lib
    build-depends:      base , unordered-containers >= 0.2
    default-language:   Haskell2010

executable main
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base, unordered-containers >= 0.2, mp4-forth
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base
                      , mp4-forth
                      , QuickCheck
                      , test-framework
                      , test-framework-quickcheck2
    default-language:   Haskell2010

