name:                potd9
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Alexander Altman
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
  default-language:    Haskell2010

test-suite potd9-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , potd9
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec
  default-language:    Haskell2010
